# theArtMetaverse

./: .gitignore  Debug_configure.bash  GNUmakefile  README.md  README.txt  access  bootstrap  config.make  configure  demo.bash  error  mw_server  nohup.out  package-lock.json  package.json  quickbuild.make  run.bash
MACDec12/binGeo/: BG_14_coordBinary.bin+8  BG_20_coordBinary.bin+8  BG_21_coordBinary.bin+8  BG_21_normalBinary.bin+4  BG_22_normalBinary.bin+4  BG_28_texCoordBinary.bin+4  BG_30_coordBinary.bin+8  BG_32_normalBinary.bin+4  BG_35_coordBinary.bin+8  BG_6_coordBinary.bin+8  BG_7_normalBinary.bin+4  BG_7_texCoordBinary.bin+4  BG_9_coordBinary.bin+8
avatars/: Dreyar_posed.fbx  FemaleTeen_posed.fbx  MaleTeen_posed.fbx  Regina_posed.fbx  X_Bot_posed.fbx  Y_Bot_posed2.fbx
etc/: .cert.pem.swp  GNUmakefile
installed/etc/: cert.pem  key.pem
installed/lib/: mw_server  options.js  package.json
lib/: blobManager.js  csvSpec.md  globalCoordinate.js  motionTracker.js  mw_server  mw_server.js  package-lock.json  package.json
mw/: AUTHORS  Install_NodeJS  README.md  package.json  package.make  quickbuild.make
mw/etc/: cert.pem  cert.pem.bl  key.pem
mw/lib/: GNUmakefile  README.md  blobTranslator.js  options.js  package.json
mw/public/: README  index.html
public/: GNUmakefile
public/mw/: GNUmakefile  (+33 more)
videoMotionTracking/: CMakeLists.txt  GNUmakefile  README.md  config.yml  example_install.bash  runNetcatDemo.bash
videoMotionTracking/mw_videoMotionTracking/: CMakeLists.txt  GNUmakefile  config.h
worldTemplate/: template.html  world.css  worldWidgets.js
(+4738 files in other folders)
